--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"/>
     <title>Youtube</title>
 </head>
 <body>
 
-    <input type="text" name="Buscar" id="Buscar" placeholder="Buscar">
+    <div class="buscador">
+        <div class="busqueda"> 
+            <input type="text" name="Buscar" id="Buscar" placeholder="Buscar">
+        </div>
+        <div class="botonbusqueda">
 
+        </div>
+       
+        
+    </div>
+   
 
 
 
